{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 26,
  "lineage": "cca06006-a7a8-9512-0b93-19c466e2e2e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "image-upload-api-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c39b1f6e131a2d8a",
            "domain": "vpc",
            "id": "eipalloc-0c39b1f6e131a2d8a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-213-216-9.compute-1.amazonaws.com",
            "public_ip": "44.213.216.9",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "image-upload-api-eip"
            },
            "tags_all": {
              "Name": "image-upload-api-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "image-upload-api-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:036727605327:internet-gateway/igw-0491fbc9d6ec00524",
            "id": "igw-0491fbc9d6ec00524",
            "owner_id": "036727605327",
            "tags": {
              "Name": "image-upload-api-igw"
            },
            "tags_all": {
              "Name": "image-upload-api-igw"
            },
            "vpc_id": "vpc-03c7c576e8eb05751"
          },
          "dependencies": [
            "aws_vpc.image-upload-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "image-upload-api-nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c39b1f6e131a2d8a",
            "connectivity_type": "public",
            "id": "nat-0c9e8f56b32b8f5e7",
            "network_interface_id": "eni-08e74260e8fae537e",
            "private_ip": "100.122.115.60",
            "public_ip": "44.213.216.9",
            "subnet_id": "subnet-022021ecd577f6786",
            "tags": {
              "Name": "image-upload-api-nat-gw"
            },
            "tags_all": {
              "Name": "image-upload-api-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.image-upload-api-eip",
            "aws_subnet.image-upload-api-vpc-public_subnet",
            "aws_vpc.image-upload-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "image-upload-api-vpc-private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:036727605327:route-table/rtb-093ab48f9fdc6c9f6",
            "id": "rtb-093ab48f9fdc6c9f6",
            "owner_id": "036727605327",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c9e8f56b32b8f5e7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "image-upload-api-vpc-private-route-table"
            },
            "tags_all": {
              "Name": "image-upload-api-vpc-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c7c576e8eb05751"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.image-upload-api-eip",
            "aws_nat_gateway.image-upload-api-nat_gw",
            "aws_subnet.image-upload-api-vpc-public_subnet",
            "aws_vpc.image-upload-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "image-upload-api-vpc-public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:036727605327:route-table/rtb-0051129ac15b29725",
            "id": "rtb-0051129ac15b29725",
            "owner_id": "036727605327",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0491fbc9d6ec00524",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "image-upload-api-vpc-public-route-table"
            },
            "tags_all": {
              "Name": "image-upload-api-vpc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c7c576e8eb05751"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.image-upload-api-igw",
            "aws_vpc.image-upload-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "image-upload-api-vpc-private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6a79791673c62fa",
            "route_table_id": "rtb-093ab48f9fdc6c9f6",
            "subnet_id": "subnet-0474b45741c7e6e7e"
          },
          "dependencies": [
            "aws_eip.image-upload-api-eip",
            "aws_nat_gateway.image-upload-api-nat_gw",
            "aws_route_table.image-upload-api-vpc-private_route_table",
            "aws_subnet.image-upload-api-vpc-private_subnet",
            "aws_subnet.image-upload-api-vpc-public_subnet",
            "aws_vpc.image-upload-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "image-upload-api-vpc-public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1d85220ebda9795",
            "route_table_id": "rtb-0051129ac15b29725",
            "subnet_id": "subnet-022021ecd577f6786"
          },
          "dependencies": [
            "aws_internet_gateway.image-upload-api-igw",
            "aws_route_table.image-upload-api-vpc-public_route_table",
            "aws_subnet.image-upload-api-vpc-public_subnet",
            "aws_vpc.image-upload-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "upload-image-api-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:036727605327:security-group/sg-0e49efaa7f1b1d552",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e49efaa7f1b1d552",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "upload-image-api-security-group20230329170911133000000001",
            "name_prefix": "upload-image-api-security-group",
            "owner_id": "036727605327",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03c7c576e8eb05751"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.image-upload-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "image-upload-api-vpc-private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:036727605327:subnet/subnet-0474b45741c7e6e7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "100.122.115.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0474b45741c7e6e7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "036727605327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "image-upload-api-vpc-private-subnet"
            },
            "tags_all": {
              "Name": "image-upload-api-vpc-private-subnet"
            },
            "vpc_id": "vpc-03c7c576e8eb05751"
          },
          "dependencies": [
            "aws_vpc.image-upload-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "image-upload-api-vpc-public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:036727605327:subnet/subnet-022021ecd577f6786",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "100.122.115.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022021ecd577f6786",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "036727605327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "image-upload-api-public-subnet"
            },
            "tags_all": {
              "Name": "image-upload-api-public-subnet"
            },
            "vpc_id": "vpc-03c7c576e8eb05751"
          },
          "dependencies": [
            "aws_vpc.image-upload-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "image-upload-api-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:036727605327:vpc/vpc-03c7c576e8eb05751",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "100.122.115.0/24",
            "default_network_acl_id": "acl-057406ffe0bc714f8",
            "default_route_table_id": "rtb-0f2f79785d96bae1a",
            "default_security_group_id": "sg-00a1fc56fef591032",
            "dhcp_options_id": "dopt-0915f5175a2453637",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03c7c576e8eb05751",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2f79785d96bae1a",
            "owner_id": "036727605327",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}